Fix About Piwik blue box overlaps with notifications

--- a/plugins/CoreHome/stylesheets/notification.less
+++ b/plugins/CoreHome/stylesheets/notification.less
@@ -1,5 +1,6 @@
 #content.admin #notificationContainer {
   width: 750px;
+  display: table-header-group; /* no overlap with About Piwik box */
 
   .notification {
     margin: 10px;
